# sistema_rpa_dev_tragetoria

./: .env  .env.exemplo  .gitignore  .replit  README_DEV.md  agendador_diario.py  api_rpa.py  dashboard_notificacoes.py  dashboard_rpa.py  demo_dashboard.py  instalar_dev.sh  main.py  pyproject.toml  temporal_orchestrator.py  teste_sistema_refatorado.py
core/: base_rpa.py  base_rpa_simples.py  browser_manager.py  data_manager.py  mongodb_manager.py  notificacoes_simples.py  sistema_notificacoes.py
docs/: GUIA_INSTALACAO.md  MANUAL_SISTEMA_RPA.md  PROMPT_CLIENTE_COMPLETO.md  SISTEMA_NOTIFICACOES_COMPLETO.md
rpa_analise_planilhas/: rpa_analise_planilhas.py
rpa_coleta_indices/: README.md  rpa_coleta_indices.py  teste_coleta_indices.py
rpa_sicredi/: rpa_sicredi.py
rpa_sienge/: __init__.py  rpa_sienge.py
scripts/: clean_system.sh  deploy.sh  gerar_pacote_dev.sh  gerar_pacote_entrega.sh  limpar_repositorio.sh  setup_uv.sh  testar_notificacoes.py
workflows/: __init__.py  workflow_reparcelamento.py
